nothing changed but error fixed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://krishna21s.github.io/UM-Intern-ToDoList/index.html"
+  "homepage": "https://krishna21s.github.io/UM-Intern-ToDoList/index.html",
   "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
